added new api into swagger and implementing controller
